# Examen_Parcial_Ignacio_De_Rojas

./: CMakeLists.txt  README.md  main.cpp
Ejercicio1/: identificacion.cpp  identificacion.h
Ejercicio2/: semana.cpp  semana.h
Ejercicio3/: notas.cpp  notas.h
Ejercicio4/: oferta.cpp  oferta.h
